# toolchain_utils

./: .bazelrc  .bazelrc.ci  .bazelversion  .gitignore  .gitlab-ci.yml  CODEOWNERS  MODULE.bazel  README.md  package-lock.json  package.json
.reuse/: dep5
e2e/: .bazelrc  .bazelrc.ci  BUILD.bazel  MODULE.bazel
e2e/export/: BUILD.bazel
e2e/local/select/: BUILD.bazel
e2e/local/triplet/: BUILD.bazel
e2e/test/fixture/: repository.bzl
e2e/toolchain/echo/: BUILD.bazel  echo.bat  echo.sh  resolved.bzl
placeholder/: BUILD.bazel  defs.bzl
placeholder/test/: rule.bzl
rules_toolchain/: .bazelrc  .gitignore  MODULE.bazel  README.md
rules_toolchain/e2e/: .bazelrc  .bazelversion  .gitignore  MODULE.bazel
rules_toolchain/e2e/host/: BUILD.bazel
rules_toolchain/e2e/local/: BUILD.bazel  non-empty.sh
rules_toolchain/e2e/local/select/: BUILD.bazel
rules_toolchain/e2e/local/triplet/: BUILD.bazel
rules_toolchain/e2e/test/: extension.bzl
rules_toolchain/e2e/test/fixture/: repository.bzl
rules_toolchain/e2e/toolchain/echo/: BUILD.bazel  content.sh  resolved.bzl  variable.bzl
rules_toolchain/e2e/toolchain/echo/info/: BUILD.bazel
rules_toolchain/toolchain/: defs.bzl  extensions.bzl  resolved.bzl  variable.bzl
rules_toolchain/toolchain/constraint/: BUILD.bazel
rules_toolchain/toolchain/constraint/cpu/: BUILD.bazel
rules_toolchain/toolchain/constraint/libc/: BUILD.bazel
rules_toolchain/toolchain/constraint/libc/gnu/: BUILD.bazel  versions.bzl
rules_toolchain/toolchain/constraint/os/: BUILD.bazel
rules_toolchain/toolchain/constraint/os/linux/: BUILD.bazel  versions.bzl
rules_toolchain/toolchain/host/: BUILD.bazel  extension.bzl
rules_toolchain/toolchain/host/triplet/: cpu.bzl  libc.bzl  repository.bzl  triplet.tmpl.bzl
rules_toolchain/toolchain/info/: BUILD.bazel  DataInfo.bzl  TargetInfo.bzl  binary.bzl  defs.bzl  rule.bzl
rules_toolchain/toolchain/local/: defs.bzl  extension.bzl
rules_toolchain/toolchain/local/binary/: BUILD.bazel  BinaryInfo.bzl  posix.tmpl.sh  rule.bzl
rules_toolchain/toolchain/local/info/: BUILD.bazel  binary.bzl  rule.bzl  test.bzl
rules_toolchain/toolchain/local/select/: repository.bzl
rules_toolchain/toolchain/local/symlink/: repository.bzl
rules_toolchain/toolchain/local/triplet/: cpu.bzl  detect.bzl  libc.bzl  os.bzl  repository.bzl
rules_toolchain/toolchain/local/which/: BUILD.bazel.in  BUILD.tmpl.bazel  repository.bzl
rules_toolchain/toolchain/platform/: BUILD.bazel
rules_toolchain/toolchain/symlink/path/: rule.bzl
rules_toolchain/toolchain/test/: BUILD.bazel  posix.tmpl.sh  rule.bzl
rules_toolchain/toolchain/triplet/: BUILD.bazel  TripletInfo.bzl  VersionInfo.bzl  VersionedInfo.bzl  common.bzl  rule.bzl  split.bzl  test.bzl  triplets.bzl  unversioned.bzl
toolchain/: BUILD.bazel  defs.bzl  resolved.bzl
toolchain/constraint/libc/: BUILD.bazel
toolchain/constraint/libc/darwin/: BUILD.bazel
toolchain/constraint/libc/gnu/: BUILD.bazel
toolchain/constraint/libc/ucrt/: BUILD.bazel
toolchain/constraint/os/: BUILD.bazel
toolchain/constraint/os/linux/: BUILD.bazel
toolchain/constraint/os/macos/: BUILD.bazel
toolchain/constraint/os/windows/: BUILD.bazel
toolchain/export/: defs.bzl  extension.bzl
toolchain/export/symlink/: repository.bzl
toolchain/info/: rule.bzl
toolchain/launcher/: launcher.sh
toolchain/local/: BUILD.bazel
toolchain/local/select/: repository.bzl
toolchain/local/triplet/: libc.bzl  os.bzl  repository.bzl  triplet.tmpl.bzl
toolchain/local/which/: BUILD.tmpl.bazel  entrypoint.tmpl.sh  repository.bzl  stub.bat  stub.sh
toolchain/platform/: BUILD.bazel
toolchain/resolved/: BUILD.tmpl.bazel  repository.bzl  resolved.tmpl.bzl
toolchain/symlink/path/: rule.bzl
toolchain/test/: BUILD.bazel  nt.tmpl.bat  posix.tmpl.sh  rule.bzl
toolchain/triplet/: BUILD.bazel  posix.tmpl.sh  rule.bzl
