module(
    name = "rules_toolchain",
    version = "0.0.0",
    bazel_compatibility = [
        ">=6.4.0",
    ],
)

bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "platforms", version = "0.0.7")

triplet = use_repo_rule("//toolchain/local/triplet:defs.bzl", "toolchain_local_triplet")

triplet(
    name = "local",
)
