module(
    name = "e2e",
    bazel_compatibility = [
        ">=6.4.0",
    ],
)

bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "rules_toolchain", version = "0.0.0")
local_path_override(
    module_name = "rules_toolchain",
    path = "..",
)

which = use_repo_rule("@rules_toolchain//toolchain:defs.bzl", "toolchain_local_which")

which(name = "echo")

register_toolchains("//toolchain/echo:all")

fixture = use_repo_rule("//test/fixture:repository.bzl", "fixture")

fixture(
    name = "fixture-amd64-linux-gnu",
)

fixture(
    name = "fixture-arm64-linux-gnu",
)

fixture(
    name = "fixture-arm-linux-musl",
)

select = use_repo_rule("@rules_toolchain//toolchain:defs.bzl", "toolchain_local_select")

select(
    name = "fixture",
    map = {
        "amd64-linux-gnu": "@fixture-amd64-linux-gnu",
        "arm64-linux-gnu": "@fixture-arm64-linux-gnu",
        "arm-linux-musl": "@fixture-arm-linux-musl",
    },
)
