module(
    name = "e2e",
    bazel_compatibility = [
        ">=7.0.0",
    ],
)

bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "rules_toolchain", version = "0.0.0")
local_path_override(
    module_name = "rules_toolchain",
    path = "..",
)

which = use_repo_rule("@rules_toolchain//toolchain/local/which:defs.bzl", "toolchain_local_which")

which(
    name = "echo",
    toolchain_type = "//toolchain/echo:type",
)

resolved = use_repo_rule("@rules_toolchain//toolchain/resolved:defs.bzl", "toolchain_resolved")

resolved(
    name = "resolved",
    toolchain_type = "//toolchain/echo:type",
)

register_toolchains("//toolchain/echo:all")

fixture = use_repo_rule("//test/fixture:repository.bzl", "fixture")

fixture(
    name = "fixture-amd64-linux-gnu",
)

fixture(
    name = "fixture-arm64-linux-gnu",
)

fixture(
    name = "fixture-arm-linux-musl",
)

fixture(
    name = "fixture-windows-ucrt",
)

fixture(
    name = "fixture-arm64-windows-ucrt",
)

select = use_repo_rule("@rules_toolchain//toolchain/local/select:defs.bzl", "toolchain_local_select")

select(
    name = "fixture",
    map = {
        "amd64-linux-gnu": "@fixture-amd64-linux-gnu",
        "arm64-linux-gnu": "@fixture-arm64-linux-gnu",
        "arm-linux-musl": "@fixture-arm-linux-musl",
        "windows-ucrt": "@fixture-windows-ucrt",
    },
)

export = use_extension("@rules_toolchain//toolchain/export:defs.bzl", "toolchain_export")
export.symlink(
    name = "export",
    target = "@fixture",
)
use_repo(export, "export")
