module(
    name = "e2e",
    bazel_compatibility = [
        ">=7.0.0",
    ],
)

bazel_dep(name = "rules_diff", version = "1.0.0-alpha.3")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "toolchain_utils", version = "0.0.0")
local_path_override(
    module_name = "toolchain_utils",
    path = "..",
)

which = use_repo_rule("@toolchain_utils//toolchain/local/which:defs.bzl", "toolchain_local_which")

which(
    name = "which-echo",
)

resolved = use_repo_rule("@toolchain_utils//toolchain/resolved:defs.bzl", "toolchain_resolved")

resolved(
    name = "resolved-echo",
    toolchain_type = "//toolchain/echo:type",
)

register_toolchains("//toolchain/echo:all")

fixture = use_repo_rule("//test/fixture:repository.bzl", "fixture")

fixture(
    name = "fixture-amd64-linux-gnu",
)

fixture(
    name = "fixture-arm64-linux-gnu",
)

fixture(
    name = "fixture-arm-linux-musl",
)

fixture(
    name = "fixture-windows-ucrt",
)

fixture(
    name = "fixture-windows-cygwin",
)

fixture(
    name = "fixture-arm64-macos-darwin",
)

fixture(
    name = "fixture-amd64-macos-darwin",
)

select = use_repo_rule("@toolchain_utils//toolchain/local/select:defs.bzl", "toolchain_local_select")

select(
    name = "fixture",
    map = {
        "amd64-linux-gnu": "@fixture-amd64-linux-gnu",
        "arm64-linux-gnu": "@fixture-arm64-linux-gnu",
        "arm-linux-musl": "@fixture-arm-linux-musl",
        "windows-ucrt": "@fixture-windows-ucrt",
        "windows-cygwin": "@fixture-windows-cygwin",
        "arm64-macos-darwin": "@fixture-arm64-macos-darwin",
        "amd64-macos-darwin": "@fixture-amd64-macos-darwin",
    },
)

export = use_extension("@toolchain_utils//toolchain/export:defs.bzl", "toolchain_export")
export.symlink(
    name = "export",
    target = "@fixture",
)
export.symlink(
    name = "export",
    target = "@fixture",
)
use_repo(export, "export")
