load("//toolchain/triplet:triplets.bzl", "TRIPLETS")

[
    platform(
        name = t.value,
        constraint_values = t.constraints,
        visibility = ["//visibility:public"],
    )
    for t in TRIPLETS
]

alias(
    name = "local",
    actual = "//toolchain/local:platform",
    visibility = ["//visibility:public"],
)
