load("@rules_toolchain//toolchain:defs.bzl", "toolchain_symlink_target", "toolchain_test")
load("@bazel_skylib//rules:build_test.bzl", "build_test")

toolchain_type(
    name = "type",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "local",
    toolchain = "@echo//:echo",
    toolchain_type = ":type",
)

toolchain_symlink_target(
    name = "script",
    target = ":echo.sh",
)

toolchain(
    name = "hermetic",
    toolchain = ":script",
    toolchain_type = ":type",
)

alias(
    name = "resolved",
    actual = "@echo//:resolved",
)

toolchain_test(
    name = "test",
    args = ["Hello, world!"],
    stdout = ":hello-world.txt",
    toolchains = [":resolved"],
)

build_test(
    name = "entrypoint",
    targets = ["@echo//:entrypoint"],
)
