load("@rules_toolchain//toolchain/symlink/target:defs.bzl", "toolchain_symlink_target")
load("@rules_toolchain//toolchain/test:defs.bzl", "toolchain_test")
load("@bazel_skylib//rules:build_test.bzl", "build_test")

toolchain_type(
    name = "type",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "local",
    toolchain = "@which-echo",
    toolchain_type = ":type",
)

toolchain_symlink_target(
    name = "script",
    target = select({
        "@rules_toolchain//toolchain/constraint/os:windows": ":echo.bat",
        "//conditions:default": ":echo.sh",
    }),
)

toolchain(
    name = "hermetic",
    toolchain = ":script",
    toolchain_type = ":type",
)

alias(
    name = "resolved",
    actual = "@resolved-echo",
)

toolchain_test(
    name = "test",
    args = ["Hello, world!"],
    stdout = ":hello-world.txt",
    toolchains = [":resolved"],
)

build_test(
    name = "entrypoint",
    targets = ["@which-echo//:entrypoint"],
)
