load("@toolchain_utils//toolchain/symlink/target:defs.bzl", "toolchain_symlink_target")
load("@toolchain_utils//toolchain/test:defs.bzl", "toolchain_test")
load("@bazel_skylib//rules:build_test.bzl", "build_test")

toolchain_type(
    name = "type",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "local",
    toolchain = "@which-echo",
    toolchain_type = ":type",
)

toolchain_symlink_target(
    name = "script",
    target = select({
        "@toolchain_utils//toolchain/constraint/os:windows": ":echo.bat",
        "//conditions:default": ":echo.sh",
    }),
)

toolchain(
    name = "hermetic",
    toolchain = ":script",
    toolchain_type = ":type",
)

alias(
    name = "resolved",
    actual = "@resolved-echo",
)

toolchain_test(
    name = "test",
    args = ["Hello, world!"],
    stdout = ":hello-world.txt",
    toolchains = [":resolved"],
)

build_test(
    name = "entrypoint",
    target_compatible_with = [
        "@toolchain_utils//toolchain/constraint/os:linux",
    ],
    targets = ["@which-echo//:entrypoint"],
)
