load("//toolchain/triplet:common.bzl", "TRIPLETS")

[
    config_setting(
        name = t.value,
        constraint_values = t.constraints,
        visibility = ["//visibility:public"],
    )
    for t in TRIPLETS
]

alias(
    name = "host",
    actual = "//toolchain/host:constraint",
    visibility = ["//visibility:public"],
)
