load(":common.bzl", "TRIPLETS")
load(":rule.bzl", "triplet")
load(":test.bzl", "test")

[
    triplet(
        name = t.value,
        visibility = ["//visibility:public"],
    )
    for t in TRIPLETS
]

alias(
    name = "local",
    actual = "//toolchain/local:triplet",
    visibility = ["//visibility:public"],
)

test(
    name = "test",
    target_under_test = ":amd64-linux-gnu",
)
