load(":triplets.bzl", "UNVERSIONED")
load(":rule.bzl", "triplet")
load(":test.bzl", "test")

[
    triplet(
        name = t.value,
        visibility = ["//visibility:public"],
    )
    for t in UNVERSIONED
]

alias(
    name = "local",
    actual = "//toolchain/local:triplet",
    visibility = ["//visibility:public"],
)

test(
    name = "test",
    target_under_test = ":amd64-linux-gnu",
)
