package(default_visibility = ["//visibility:public"])

constraint_setting(name = "libc")

constraint_value(
    name = "gnu",
    constraint_setting = ":libc",
)

constraint_value(
    name = "ucrt",
    constraint_setting = ":libc",
)

constraint_value(
    name = "msvc",
    constraint_setting = ":libc",
)
