package(default_visibility = ["//visibility:public"])

alias(
    name = "linux",
    actual = "@platforms//os:linux",
)

alias(
    name = "windows",
    actual = "@platforms//os:windows",
)

alias(
    name = "macos",
    actual = "@platforms//os:macos",
)

alias(
    name = "netbsd",
    actual = "@platforms//os:netbsd",
)

alias(
    name = "freebsd",
    actual = "@platforms//os:freebsd",
)

alias(
    name = "openbsd",
    actual = "@platforms//os:openbsd",
)
