load("@toolchain_utils//toolchain/symlink/path:defs.bzl", "toolchain_symlink_path")

package(default_visibility = ["//visibility:public"])

exports_files(["entrypoint"])

toolchain_symlink_path(
    name = "{{target}}",
    basename = "{{basename}}",
    path = "{{path}}",
    tags = ["no-remote"],
    variable = "{{variable}}",
)
