load("@toolchain_utils//toolchain/symlink/path:defs.bzl", "toolchain_symlink_path")
load("@toolchain_utils//toolchain/symlink/target:defs.bzl", "toolchain_symlink_target")

exports_files(
    ["entrypoint"],
    visibility = ["//visibility:public"],
)

toolchain_symlink_path(
    name = "symlink",
    path = "{{path}}",
    tags = ["no-remote"],
)

toolchain_symlink_target(
    name = "{{target}}",
    basename = "{{basename}}",
    tags = ["no-remote"],
    target = ":symlink",
    variable = "{{variable}}",
    visibility = ["//visibility:public"],
)
