load("@rules_toolchain//toolchain/triplet:local.bzl", "TRIPLET")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@bazel_skylib//rules:write_file.bzl", "write_file")

write_file(
    name = "expected",
    out = "triplet.txt",
    content = [TRIPLET.value],
)

diff_test(
    name = "test",
    size = "small",
    file1 = ":expected",
    file2 = "@rules_toolchain//toolchain/triplet:local",
)
