load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load(":resolved.bzl", "resolved")
load("@rules_toolchain//toolchain:defs.bzl", "toolchain_symlink_target")

toolchain_type(
    name = "type",
)

toolchain_symlink_target(
    name = "hermetic",
    target = ":echo.sh",
)

toolchain(
    name = "local",
    toolchain = "@echo//:echo",
    toolchain_type = ":type",
)

alias(
    name = "echo",
    actual = "hermetic",
)

resolved(
    name = "resolved",
    toolchain = ":type",
)

genrule(
    name = "data",
    testonly = True,
    outs = ["hello-world.txt"],
    cmd = "$(ECHO) 'Hello, world!' > $@",
    toolchains = [":resolved"],
)

diff_test(
    name = "diff",
    file1 = ":data",
    file2 = ":hello-world.txt",
)
