package(default_visibility = ["//visibility:public"])

constraint_setting(name = "linux")

# TODO: figure out a way to generate these
VERSIONS = (
    "3.11.13",
    "6.3.0",
)

[
    constraint_value(
        name = version,
        constraint_setting = ":linux",
    )
    for version in VERSIONS
]
