load("@local//:triplet.bzl", "TRIPLET")
load("@bazel_skylib//lib:sets.bzl", "sets")

package(default_visibility = ["//visibility:public"])

constraint_setting(name = "linux")

# TODO: figure out a way to generate these
VERSIONS = sets.to_list(sets.make(() + (TRIPLET.os.version.value,) if TRIPLET.os.version else ()))

[
    constraint_value(
        name = version,
        constraint_setting = ":linux",
    )
    for version in VERSIONS
]
